--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack serve",
     "build": "webpack"
   },
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/kathode/starter-template#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
